--- a/app/index.html
+++ b/app/index.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="myApp" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="myApp" class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html lang="en" ng-app="app" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html lang="en" ng-app="app" class="no-js"> <!--<![endif]-->
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>My AngularJS App</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">-->
-  <!--<link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">-->
-  <link rel="stylesheet" href="css/app.css">
-  <!--<script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>-->
+  <link rel="stylesheet" href="dist/app.css">
 </head>
-<body>
+<body ng-controller="BaseCtrl as base">
   <ul class="menu">
     <li><a href="#!/view1">view1</a></li>
     <li><a href="#!/view2">view2</a></li>
@@ -24,18 +21,10 @@
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
 
-  <div ng-view></div>
+  <div class="view-container">
+    <div id="view" ng-view class="velocity-enter-transition-slideUpIn" data-velocity-opts="{ duration: 400, complete: base.afterViewEnter }"></div>
+  </div>
 
-  <!-- In production use:
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
-  -->
-  <!--<script src="bower_components/angular/angular.js"></script>-->
-  <!--<script src="bower_components/angular-route/angular-route.js"></script>-->
-  <script src="js/app.js"></script>
-  <!--<script src="view1/view1.js"></script>-->
-  <!--<script src="view2/view2.js"></script>-->
-  <!--<script src="components/version/version.js"></script>-->
-  <!--<script src="components/version/version-directive.js"></script>-->
-  <!--<script src="components/version/interpolate-filter.js"></script>-->
+  <script src="dist/app.js"></script>
 </body>
 </html>
