--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -1,1 +1,18 @@
-<h2>This is the home page</h2>
+<!--<section class="hero">-->
+    <!--<section class="container">-->
+        <!--<h1>Cinescape <small>Aerial Cinematography</small></h1>-->
+        <!--Our philosophy is to deliver creative and unique works to customer.-->
+        <!--<a href="#/portfolio">See Our Work</a>-->
+    <!--</section>-->
+<!--</section>-->
+
+<div class="row home-hero align-middle align-center">
+    <div class="column text-center hero-text">
+        <div class="hero-bg"></div>
+        <h1>Cinescape <small>Aerial Cinematography</small></h1>
+        <p class="lead">
+            Let us help you sell your client's house faster and get the price they want!
+        </p>
+        <button class="button large">See Our Work <i class="fa fa-arrow-right"></i></button>
+    </div>
+</div>
