--- a/app/index.html
+++ b/app/index.html
@@ -1,30 +1,77 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html lang="en" ng-app="app" class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html lang="en" ng-app="app" class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>
+<html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>
+<html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>
+<html lang="en" ng-app="app" class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!-->
+<html lang="en" ng-app="app" class="no-js"> <!--<![endif]-->
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="dist/app.css">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>My AngularJS App</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="dist/app.css">
+    <link rel="stylesheet" href="dist/app.css">
 </head>
 <body ng-controller="BaseCtrl as base">
-  <ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
-  </ul>
+    <div class="off-canvas-wrapper">
+        <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 
-  <!--[if lt IE 7]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-  <![endif]-->
+            <!-- off-canvas title bar for 'small' screen -->
+            <div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
+                <div class="title-bar-right">
+                    <span class="title-bar-title"></span>
+                    <button class="menu-icon" type="button" data-open="offCanvasRight"></button>
+                </div>
+            </div>
 
-  <div class="view-container">
-    <div id="view" ng-view class="velocity-enter-transition-slideUpIn" data-velocity-opts="{ duration: 400, complete: base.afterViewEnter }"></div>
-  </div>
+            <!-- off-canvas right menu -->
+            <div class="off-canvas position-right" id="offCanvasRight" data-off-canvas data-position="right">
+                <ul class="vertical dropdown menu" data-dropdown-menu>
+                    <li><a href="right_item_1">Right item 1</a></li>
+                    <li><a href="right_item_2">Right item 2</a></li>
+                    <li><a href="right_item_3">Right item 3</a></li>
+                </ul>
+            </div>
 
-  <script src="dist/app.js"></script>
+            <header>
+                <div class="row">
+                    <div class="column text-center">
+                        <a class="logo" href="#/">
+                            <i></i>
+                        </a>
+                    </div>
+                </div>
+                <div class="row show-for-medium">
+                    <div class="medium-12 columns">
+                        <ul class="menu align-center">
+                            <li><a href="#/" ng-class="{active: base.$rootScope.appData.activeNavigationLink == 'home'}">Home</a></li>
+                            <li><a href="#/view2">Portfolio</a></li>
+                            <li><a href="#/about" ng-class="{active: base.$rootScope.appData.activeNavigationLink == 'about'}">About Us</a></li>
+                            <li><a href="#/contact" ng-class="{active: base.$rootScope.appData.activeNavigationLink == 'contact'}">Contact Us</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </header>
+
+            <!-- original content goes in this container -->
+            <div class="off-canvas-content" data-off-canvas-content>
+                <div id="view" ng-view class="velocity-enter-transition-slideUpIn" data-velocity-opts="{ duration: 400, complete: base.afterViewEnter }"></div>
+            </div>
+
+            <!-- close wrapper, no more content after this -->
+        </div>
+    </div>
+
+    <!--[if lt IE 7]>
+    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
+        your browser</a> to improve your experience.</p>
+    <![endif]-->
+
+    <script src="dist/dependencies.js"></script>
+    <script src="dist/app.js"></script>
 </body>
 </html>
