Finished contact cards.

--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -9,9 +9,9 @@
 <div class="row home-hero align-middle align-center">
     <div class="column text-center hero-text">
         <div class="hero-bg"></div>
-        <h1>Cinescape <small>Aerial Cinematography</small></h1>
+        <h1><small>Welcome to</small> Cinescape</h1>
         <p class="lead">
-            Let us help you sell your client's house faster and get the price they want!
+            Aerial Cinematography for Real Estate Professionals
         </p>
         <button class="button large">See Our Work <i class="fa fa-arrow-right"></i></button>
     </div>
