--- a/app/angular-app/contact-us/contact-us.html
+++ b/app/angular-app/contact-us/contact-us.html
@@ -4,24 +4,47 @@
         <h1>Contacts</h1>
         <hr>
 
-        <div class="contact-card" ng-repeat="contact in vm.contacts track by $index">
-            <div class="contact-top text-center">
-                <span ng-bind="contact.name"></span>
-                <span ng-bind="contact.title"></span>
-            </div>
-            <div class="contact-down">
-                <div class="row medium-collapse">
-                    <div class="medium-6 small-12 columns text-center">
-                        <span><i class="fa fa-phone-square"></i></span>
-                        <span ng-bind="contact.phone"></span>
+        <div class="row small-up-1 medium-up-2 large-up-4">
+            <div class="column velocity-enter-transition-slideUpIn" data-velocity-opts="{ duration:500, stagger: 100 }" ng-repeat="contact in vm.contacts track by $index">
+                <div class="contact-card">
+                    <div class="contact-top text-center">
+                        <span ng-bind="contact.name"></span>
+                        <span ng-bind="contact.title"></span>
                     </div>
-                    <div class="medium-6 small-12 columns text-center">
-                        <span><i class="fa fa-envelope"></i></span>
-                        <span ng-bind="contact.email"></span>
+                    <div class="contact-down">
+                        <div class="row medium-collapse">
+                            <div class="medium-12 small-12 columns text-center">
+                                <span><i class="fa fa-phone-square"></i> <span ng-bind="contact.phone"></span></span>
+                            </div>
+                            <div class="medium-12 small-12 columns text-center">
+                                <span><i class="fa fa-envelope"></i> <span ng-bind="contact.email"></span></span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
 
+        <h1>Contact Us</h1>
+        <hr>
+        <form novalidate app-form name="vm.contactForm" ng-submit="onSubmit(vm.contactForm)">
+            <div class="row">
+                <div class="medium-6 columns">
+                    <label>
+                        Name <small>Required</small>
+                        <input type="text" required ng-model="vm.contactForm.name"/>
+                        <small class="form-error">This is a required field</small>
+                    </label>
+                </div>
+                <div class="medium-6 columns">
+                    <label>
+                        Name <small>Required</small>
+                        <input type="text" required ng-model="vm.contactForm.name"/>
+                        <small class="form-error">This is a required field</small>
+                    </label>
+                </div>
+            </div>
+            <button type="submit">Submit</button>
+        </form>
     </div>
 </div>
