Added animations and portfolio page.

--- a/app/angular-app/about-us/about-us.html
+++ b/app/angular-app/about-us/about-us.html
@@ -2,7 +2,7 @@
     <div class="column text-right hero-text">
         <div class="hero-bg"></div>
         <h1>About Us</h1>
-        <p>
+        <p class="lead">
             Our philosophy is to deliver creative and unique works to our customers.
         </p>
     </div>
@@ -45,9 +45,9 @@
                     </div>
                     <div class="contact-down">
                         <div class="row medium-collapse">
-                            <div class="medium-12 small-12 columns text-center">
-                                <span><i class="fa fa-phone-square"></i> <span ng-bind="contact.phone"></span></span>
-                            </div>
+                            <!--<div class="medium-12 small-12 columns text-center">-->
+                                <!--<span><i class="fa fa-phone-square"></i> <span ng-bind="contact.phone"></span></span>-->
+                            <!--</div>-->
                             <div class="medium-12 small-12 columns text-center">
                                 <span><i class="fa fa-envelope"></i> <a href="mailto:{{contact.email}}"><span ng-bind="contact.email"></span></a></span>
                             </div>
