--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
                                     <li>
                                         <a href="#/" ng-class="{active: base.$rootScope.appData.activeNavigationLink == 'home'}">Home</a>
                                     </li>
-                                    <li><a href="#/view2">Portfolio</a></li>
+                                    <li><a href="#/portfolio" ng-class="{active: base.$rootScope.appData.activeNavigationLink == 'portfolio'}">Portfolio</a></li>
                                     <li>
                                         <a href="#/about" ng-class="{active: base.$rootScope.appData.activeNavigationLink == 'about'}">About
                                             Us</a></li>
