--- a/app/angular-app/contact-us/contact-us.html
+++ b/app/angular-app/contact-us/contact-us.html
@@ -1,7 +1,7 @@
 <div class="row content">
     <div class="small-12 columns">
 
-        <h1>Contact Us</h1>
+        <h1>Contact Us<span><i class="fa fa-phone-square"></i> 818-732-0006</span></h1>
         <hr>
 
         <form novalidate app-form name="vm.contactForm" ng-submit="vm.onSubmit(vm.contactForm)">
@@ -51,7 +51,7 @@
 
             <div class="row">
                 <div class="small-12 columns text-right">
-                    <button type="submit" class="button success" ng-disabled="vm.isSubmitting">Submit<span ng-show="vm.isSubmitting">ing...</span></button>
+                    <button type="submit" class="button large" ng-disabled="vm.isSubmitting">Submit<span ng-show="vm.isSubmitting">ing...</span></button>
                 </div>
             </div>
         </form>
