Added pricing page and better navigation logic.

--- a/app/angular-app/contact-us/contact-us.html
+++ b/app/angular-app/contact-us/contact-us.html
@@ -1,4 +1,4 @@
-<div class="row content">
+<div class="row content contact-us">
     <div class="small-12 columns">
 
         <h1>Contact Us<span><i class="fa fa-phone-square"></i> 818-732-0006</span></h1>
