--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -9,10 +9,10 @@
 <div class="row home-hero align-middle align-center">
     <div class="column text-center hero-text">
         <div class="hero-bg"></div>
-        <h1><small>Welcome to</small> Cinescape</h1>
-        <p class="lead">
+        <h1><small>Welcome to</small> <span>Cinescape</span></h1>
+        <p>
             Aerial Cinematography for Real Estate Professionals
         </p>
-        <button class="button large">See Our Work <i class="fa fa-arrow-right"></i></button>
+        <a href="#/portfolio" class="button large">See Our Work <i class="fa fa-arrow-right"></i></a>
     </div>
 </div>
