Mobile nav menu.

--- a/app/angular-app/contact-us/contact-us.html
+++ b/app/angular-app/contact-us/contact-us.html
@@ -1,7 +1,7 @@
 <div class="row content contact-us">
     <div class="small-12 columns">
 
-        <h1>Contact Us<span><i class="fa fa-phone-square"></i> 818-732-0006</span></h1>
+        <h1>Contact Us<span>818-732-0006</span></h1>
         <hr>
 
         <form novalidate app-form name="vm.contactForm" ng-submit="vm.onSubmit(vm.contactForm)">
