--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -13,6 +13,9 @@
         <p>
             Aerial Cinematography for Real Estate Professionals
         </p>
+        <p>
+            Servicing the <span>Southern California</span> area
+        </p>
         <a href="#/portfolio" class="button large">See Our Work <i class="fa fa-arrow-right"></i></a>
     </div>
 </div>
