--- a/app/index.html
+++ b/app/index.html
@@ -19,7 +19,7 @@
 <body ng-controller="BaseCtrl as base">
     <div id="wrap">
         <div id="main">
-            <div class="off-canvas-wrapper">
+            <div class="off-canvas-wrapper" id="off-canvas">
                 <div class="off-canvas-wrapper-inner" data-off-canvas-wrapper>
 
                     <!-- off-canvas title bar for 'small' screen -->
@@ -33,9 +33,9 @@
                     <!-- off-canvas right menu -->
                     <div class="off-canvas position-right" id="offCanvasRight" data-off-canvas data-position="right">
                         <ul class="vertical dropdown menu" data-dropdown-menu>
-                            <li><a href="right_item_1">Right item 1</a></li>
-                            <li><a href="right_item_2">Right item 2</a></li>
-                            <li><a href="right_item_3">Right item 3</a></li>
+                            <li ng-repeat="navLink in base.navLinks track by navLink.label">
+                                <a data-close ng-href="{{navLink.href}}" ng-class="{active: navLink.isActive}" ng-bind-html="navLink.smallLabel"></a>
+                            </li>
                         </ul>
                     </div>
 
