--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="dist/app.css">
-    <link rel="stylesheet" href="dist/app.css">
+    <!--<link rel="stylesheet" href="dist/app.css">-->
 </head>
 <body ng-controller="BaseCtrl as base">
     <div id="wrap">
@@ -97,7 +97,7 @@
         </div>
     </footer>
 
-    <script src="bower_components/scrollmagic/scrollmagic/uncompressed/ScrollMagic.js"></script>
+    <!--<script src="bower_components/scrollmagic/scrollmagic/uncompressed/ScrollMagic.js"></script>-->
     <script src="dist/dependencies.js"></script>
     <script src="dist/app.js"></script>
 </body>
