Redesigned header, added sample content to home page.

--- a/app/angular-app/about-us/about-us.html
+++ b/app/angular-app/about-us/about-us.html
@@ -77,3 +77,19 @@
         </div>
     </div>
 </div>
+
+<div class="row align-middle align-center text-center full-width latest-work">
+    <div class="small-12 columns">
+        <div class="row align-center">
+            <div class="small-12 columns">
+                <h1>Recent Work</h1>
+            </div>
+        </div>
+
+        <div class="row align-center">
+            <div class="small-12 medium-6 large-5 columns">
+                <a href="#/portfolio" class="button large">Checkout our latest work <i class="fa fa-angle-right"></i></a>
+            </div>
+        </div>
+    </div>
+</div>
