--- a/app/index.html
+++ b/app/index.html
@@ -74,12 +74,16 @@
     </div>
 
     <footer id="footer">
-        <div class="row">
-            <div class="small-9 columns">
-                © 2016 Copyright Cinescape
+        <div class="row align-middle">
+            <div class="small-12 medium-4 columns">
+                818-732-0006
             </div>
-            <div class="columns text-right">
-                <button class="button secondary" ng-click="base.onScrollToTopClick()"><i class="fa-angle-up fa"></i></button>
+            <div class="small-12 medium-4 columns text-center">
+                Based in Southern California
+            </div>
+            <div class="small-12 medium-4 columns text-right">
+                <!--<button class="button secondary" ng-click="base.onScrollToTopClick()"><i class="fa-angle-up fa"></i></button>-->
+                <a href="mailto:cinescape@cinescape.com">cinescape@cinescape.com</a>
             </div>
         </div>
     </footer>
