Adjusted pricing content.

--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -1,12 +1,12 @@
 <div class="row home-hero align-middle align-center">
     <div class="hero-overlay"></div>
     <div class="column text-center hero-text">
-        <p><em>Cinescape</em></p>
-        <h1><span>Aerial Cinematography</span> for Real Estate Professionals</h1>
+        <p style="opacity: 0"><em>Cinescape</em></p>
+        <h1 style="opacity: 0"><span>Aerial Cinematography</span> for Real Estate Professionals</h1>
         <!--<p>-->
             <!--Servicing the <span>Southern California</span> area-->
         <!--</p>-->
-        <button ng-click="vm.onLearnMore()" class="button large">Learn More</button>
+        <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large">Learn More</button>
     </div>
 </div>
 
