--- a/app/angular-app/pricing/pricing.html
+++ b/app/angular-app/pricing/pricing.html
@@ -11,7 +11,7 @@
                     <li class="description" ng-bind="info.description"></li>
                     <li ng-bind="info.houseSize"></li>
                     <li ng-bind="info.lotSize"></li>
-                    <li ng-bind="info.product"></li>
+                    <li ng-bind="info.included"></li>
                     <li><a class="button" href="#/contact">Set Up An Appointment</a></li>
                 </ul>
             </div>
