Tweaked header for mobile.

--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,10 @@
 
                     <!-- off-canvas title bar for 'small' screen -->
                     <div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
+                        <div class="title-bar">
+                            <span class="title-bar-title">Cinescape</span>
+                            <!--<button class="menu-icon" type="button" data-open="offCanvasRight"></button>-->
+                        </div>
                         <div class="title-bar-right">
                             <span class="title-bar-title"></span>
                             <button class="menu-icon" type="button" data-open="offCanvasRight"></button>
