Replaced home image. Other UI tweaks.

--- a/app/angular-app/contact-us/contact-us.html
+++ b/app/angular-app/contact-us/contact-us.html
@@ -4,6 +4,10 @@
         <h1>Contact Us<span>818-732-0006</span></h1>
         <hr>
 
+        <div class="callout">
+            <p>To schedule an appointment please fill out the form below or you can call us directly at 818-732-0006.</p>
+        </div>
+
         <form novalidate app-form name="vm.contactForm" ng-submit="vm.onSubmit(vm.contactForm)">
             <div class="row">
                 <div class="small-12 medium-4 columns">
