--- a/app/angular-app/about-us/about-us.html
+++ b/app/angular-app/about-us/about-us.html
@@ -17,10 +17,10 @@
             pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.Aenean commodo ligula eget dolor. Aenean massa.
             Cum sociis natoque penatibus et magnis dis parturient
         </p>
-        <div class="happy-customers text-center">
-            <h2 class="amount">5,056</h2>
-            <span class="caption">happy customers</span>
-        </div>
+        <!--<div class="happy-customers text-center">-->
+            <!--<h2 class="amount">5,056</h2>-->
+            <!--<span class="caption">happy customers</span>-->
+        <!--</div>-->
     </div>
     <div class="medium-6 small-12 columns philosophy-hero">
 
@@ -80,15 +80,16 @@
 
 <div class="row align-middle align-center text-center full-width latest-work">
     <div class="small-12 columns">
-        <div class="row align-center">
-            <div class="small-12 columns">
-                <h1>Recent Work</h1>
-            </div>
-        </div>
+        <!--<div class="row align-center">-->
+            <!--<div class="small-12 columns">-->
+                <!--<h1>Recent Work</h1>-->
+            <!--</div>-->
+        <!--</div>-->
 
         <div class="row align-center">
-            <div class="small-12 medium-6 large-5 columns">
-                <a href="#/portfolio" class="button large">Checkout our latest work <i class="fa fa-angle-right"></i></a>
+            <div class="column text-center call-to-action">
+                <a href="#/portfolio" class="button large hollow">Checkout our latest work</a>
+                <a href="#/contact" class="button large hollow">Schedule an appointment</a>
             </div>
         </div>
     </div>
