--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -71,8 +71,9 @@
     <div class="row full-width">
         <div class="column text-center">
             <div class="row standard-width">
-                <div class="column text-center">
-                    <a href="#/portfolio" class="button large">Checkout our latest work <i class="fa fa-angle-right"></i></a>
+                <div class="column text-center call-to-action">
+                    <a href="#/portfolio" class="button large hollow">Checkout our latest work</a>
+                    <a href="#/contact" class="button large hollow">Schedule an appointment</a>
                 </div>
             </div>
         </div>
