--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,7 @@
                     <!-- off-canvas title bar for 'small' screen -->
                     <div class="title-bar" data-responsive-toggle="widemenu" data-hide-for="medium">
                         <div class="title-bar">
-                            <span class="title-bar-title">Cinescape</span>
+                            <span class="title-bar-title"><a href="#/">Cinescape</a></span>
                             <!--<button class="menu-icon" type="button" data-open="offCanvasRight"></button>-->
                         </div>
                         <div class="title-bar-right">
