--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -11,6 +11,7 @@
 </div>
 
 <div class="home-content">
+
     <div class="row full-width">
         <div class="column">
             <div class="row standard-width">
@@ -41,7 +42,8 @@
                             <img src="http://www.aerialvideoandphoto.com/Aerial_Camera_Gear_files/shapeimage_5.png" alt="Aerial Drone"/>
                         </div>
                         <div class="small-12 medium-8 columns">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, aliquam commodi consequuntur cum doloribus eius eum ex, harum id incidunt iste itaque libero molestiae provident quia quidem similique vel voluptates.</p>
+                            <p>Our outdoor footage is shot with a S1000+ drone mounted with a Movi M5 gimbal and a Sony A7s mark II 4K camera. This means you get beautifully stabilized 4K footage of the property flown by an FAA licensed pilot.</p>
+                            <!--<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, aliquam commodi consequuntur cum doloribus eius eum ex, harum id incidunt iste itaque libero molestiae provident quia quidem similique vel voluptates.</p>-->
                         </div>
                     </div>
                 </div>
@@ -53,7 +55,7 @@
         <div class="column">
             <div class="row standard-width">
                 <div class="column text-center">
-                    <h2>Professional Video Editing</h2>
+                    <h2>Professionally Edited 4K Video</h2>
                     <hr>
                     <div class="row align-middle">
                         <div class="small-12 medium-8 columns small-order-2 medium-order-1">
@@ -71,8 +73,9 @@
     <div class="row full-width">
         <div class="column text-center">
             <div class="row standard-width">
-                <div class="column text-center">
-                    <a href="#/portfolio" class="button large">Checkout our latest work <i class="fa fa-angle-right"></i></a>
+                <div class="column text-center call-to-action">
+                    <a href="#/portfolio" class="button large hollow">Checkout Our Latest Work</a>
+                    <a href="#/contact" class="button large hollow">Schedule An Appointment</a>
                 </div>
             </div>
         </div>
