Updated logo and theme colors.

--- a/app/angular-app/about-us/about-us.html
+++ b/app/angular-app/about-us/about-us.html
@@ -88,8 +88,8 @@
 
         <div class="row align-center">
             <div class="column text-center call-to-action">
-                <a href="#/portfolio" class="button large hollow">Checkout our latest work</a>
-                <a href="#/contact" class="button large hollow">Schedule an appointment</a>
+                <a href="#/portfolio" class="button large alert radius">Checkout Our Latest Work</a>
+                <a href="#/contact" class="button large alert radius">Schedule An Appointment</a>
             </div>
         </div>
     </div>
