--- a/app/angular-app/contact-us/contact-us.html
+++ b/app/angular-app/contact-us/contact-us.html
@@ -55,7 +55,7 @@
 
             <div class="row">
                 <div class="small-12 columns text-right">
-                    <button type="submit" class="button large" ng-disabled="vm.isSubmitting">Submit<span ng-show="vm.isSubmitting">ing...</span></button>
+                    <button type="submit" class="button large alert radius" ng-disabled="vm.isSubmitting">Submit<span ng-show="vm.isSubmitting">ing...</span></button>
                 </div>
             </div>
         </form>
