--- a/app/angular-app/pricing/pricing.html
+++ b/app/angular-app/pricing/pricing.html
@@ -12,7 +12,7 @@
                     <li ng-bind="info.houseSize"></li>
                     <li ng-bind="info.lotSize"></li>
                     <li ng-bind="info.included"></li>
-                    <li><a class="button" href="#/contact">Set Up An Appointment</a></li>
+                    <li><a class="button alert" href="#/contact">Set Up An Appointment</a></li>
                 </ul>
             </div>
         </div>
