--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -6,7 +6,7 @@
         <!--<p>-->
             <!--Servicing the <span>Southern California</span> area-->
         <!--</p>-->
-        <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large">Learn More</button>
+        <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large alert">Learn More</button>
     </div>
 </div>
 
@@ -73,8 +73,8 @@
         <div class="column text-center">
             <div class="row standard-width">
                 <div class="column text-center call-to-action">
-                    <a href="#/portfolio" class="button large hollow">Checkout Our Latest Work</a>
-                    <a href="#/contact" class="button large hollow">Schedule An Appointment</a>
+                    <a href="#/portfolio" class="button large alert radius">Checkout Our Latest Work</a>
+                    <a href="#/contact" class="button large alert radius">Schedule An Appointment</a>
                 </div>
             </div>
         </div>
