Rotating background image for home page is working.

--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -1,11 +1,9 @@
-<div class="row home-hero align-middle align-center">
+<div class="row align-middle home-hero align-center">
+    <div ng-repeat="section in vm.sections track by $index" class="hero-img" ng-class="{'hero-active': vm.currentSection.section == section.section}" style="background-image: url('../dist/images/{{section.backgroundImage}}');"></div>
     <div class="hero-overlay"></div>
     <div class="column text-center hero-text">
         <p style="opacity: 0"><em>Cinescape</em></p>
-        <h1 style="opacity: 0"><span>Aerial Cinematography</span> for Real Estate Professionals</h1>
-        <!--<p>-->
-            <!--Servicing the <span>Southern California</span> area-->
-        <!--</p>-->
+        <h1 style="opacity: 0" ng-bind="vm.currentSection.slogan">Aerial Cinematography for Real Estate Professionals</h1>
         <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large alert">Learn More</button>
     </div>
 </div>
