Fixed image url reference.

--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -1,5 +1,5 @@
 <div class="row align-middle home-hero align-center">
-    <div ng-repeat="section in vm.sections track by $index" class="hero-img" ng-class="{'hero-active': vm.currentSection.section == section.section}" style="background-image: url('../dist/images/{{section.backgroundImage}}');"></div>
+    <div ng-repeat="section in vm.sections track by $index" class="hero-img" ng-class="{'hero-active': vm.currentSection.section == section.section}" style="background-image: url('dist/images/{{section.backgroundImage}}');"></div>
     <div class="hero-overlay"></div>
     <div class="sectionIndicatorWrapper">
         <ul>
