--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -5,10 +5,13 @@
         <ul>
             <li ng-repeat="section in vm.sections track by $index" class="sectionIndicator" ng-class="{active: vm.currentSection.section == section.section}"></li>
         </ul>
-        <div class="sectionProgress"></div>
+        <!--<div class="sectionProgress"></div>-->
     </div>
     <div class="column text-center hero-text">
-        <p style="opacity: 0"><em ng-bind="vm.currentSection.title"></em></p>
+        <div class="title-wrapper" style="opacity: 0">
+            <p ng-repeat="section in vm.sections track by $index" ng-class="{active: vm.currentSection.section == section.section}" ng-style="section.translateStyle"><em ng-bind="section.title"></em></p>
+        </div>
+        <hr class="section-progress">
         <h1 style="opacity: 0" ng-bind="vm.currentSection.slogan">Aerial Cinematography for Real Estate Professionals</h1>
         <button style="opacity: 0" ng-click="vm.onLearnMore()" class="button large alert" nng-bind="vm.currentSection.learnMoreText">Learn More</button>
     </div>
@@ -24,7 +27,7 @@
                     <hr>
                     <div class="row align-middle">
                         <div class="small-12 medium-8 columns small-order-2 medium-order-1">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, aliquam commodi consequuntur cum doloribus eius eum ex, harum id incidunt iste itaque libero molestiae provident quia quidem similique vel voluptates.</p>
+                            <p>The FAA requires that all commercial operators of sUAV’s (Drones) be licensed and be proficient in Aeronautics and Air Space Regulations. Cinescape operators carry section 107 certifications and are fully insured giving our customers complete piece mind. Our staff are trained to work with the FAA and Air Traffic Control Towers in the event that operating limitations occur due to flight restrictions or proximity to public airports.</p>
                         </div>
                         <div class="small-12 medium-4 columns small-order-1 medium-order-2">
                             <img src="dist/images/faa-logo.png" alt="FAA Logo"/>
@@ -46,7 +49,8 @@
                             <img src="dist/images/s1000.png" alt="Aerial Drone"/>
                         </div>
                         <div class="small-12 medium-8 columns">
-                            <p>Our outdoor footage is shot with a S1000+ drone mounted with a Movi M5 gimbal and a Sony A7s mark II 4K camera. This means you get beautifully stabilized 4K footage of the property flown by an FAA licensed pilot.</p>
+                            <p>Whether you’re looking for a simple real estate presentation or a full commercial production,
+                                we have a wide range of the latest cameras, sUAV’s and Post Production equipment to handle any size job. Our sUAV’s are equipped with fully autonomous flight automation systems allowing us to perform complex shots that are difficult to achieve while flying manually.</p>
                         </div>
                     </div>
                 </div>
@@ -58,7 +62,7 @@
         <div class="column">
             <div class="row standard-width">
                 <div class="column text-center">
-                    <h2>Professionally Edited 4K Video</h2>
+                    <h2>Professionally Edited Video</h2>
                     <hr>
                     <div class="row align-middle">
                         <div class="small-12 medium-8 columns small-order-2 medium-order-1">
