Fixed IE issues.

--- a/app/angular-app/home/home.html
+++ b/app/angular-app/home/home.html
@@ -20,9 +20,9 @@
 <div class="home-content">
 
     <div class="row full-width">
-        <div class="column">
+        <div class="column small-12">
             <div class="row standard-width">
-                <div class="column text-center">
+                <div class="column text-center small-12">
                     <h2>Licensed by the FAA</h2>
                     <hr>
                     <div class="row align-middle">
@@ -39,9 +39,9 @@
     </div>
 
     <div class="row full-width">
-        <div class="column">
+        <div class="column small-12">
             <div class="row standard-width">
-                <div class="column text-center">
+                <div class="column text-center small-12">
                     <h2>Well Equipped</h2>
                     <hr>
                     <div class="row align-middle">
@@ -59,9 +59,9 @@
     </div>
 
     <div class="row full-width">
-        <div class="column">
+        <div class="column small-12">
             <div class="row standard-width">
-                <div class="column text-center">
+                <div class="column text-center small-12">
                     <h2>Professionally Edited Video</h2>
                     <hr>
                     <div class="row align-middle">
@@ -78,9 +78,9 @@
     </div>
 
     <div class="row full-width">
-        <div class="column text-center">
+        <div class="column text-center small-12">
             <div class="row standard-width">
-                <div class="column text-center call-to-action">
+                <div class="column text-center call-to-action small-12">
                     <a href="#/portfolio" class="button large alert radius">Checkout Our Latest Work</a>
                     <a href="#/contact" class="button large alert radius">Schedule An Appointment</a>
                 </div>
