--- a/app/index.html
+++ b/app/index.html
@@ -45,12 +45,12 @@
 
                     <header>
                         <div class="row full-width">
-                            <div class="column">
+                            <div class="column large-5">
                                 <a class="logo" href="#/">
                                     <i></i>
                                 </a>
                             </div>
-                            <div class="column show-for-medium">
+                            <div class="column show-for-medium large-7">
                                 <ul class="menu align-right light">
                                     <li ng-repeat="navLink in base.navLinks track by navLink.label">
                                         <a ng-href="{{navLink.href}}" ng-class="{active: navLink.isActive}" ng-bind="navLink.label"></a>
